- update 新增单独校验链接char服务的userid,passwd

--- a/conf/battle/crossserver.conf
+++ b/conf/battle/crossserver.conf
@@ -8,26 +8,39 @@
 //是否允许来自不同服务器的玩家在中立服相互交易
 //注意①: 必须先允许交易
 //注意②: 如同时开启允许舍弃东西到地面,或者邮件等等将意义不大
-diff_server_trade: no
+diff_server_trade: yes
 
 //是否允许来自不同服务器的玩家相互发邮件
 //注意①: 必须先允许邮件
-diff_server_mail: no
+diff_server_mail: yes
 
 //是否允许来自不同服务器的玩家购买对方的露天商店物品(包括buyingshop)
 //注意①: 必须先允许交易
-diff_server_vending: no
+diff_server_vending: yes
 
 //====================队伍以及公会相关限制====================
 //是否允许来自不同服务器的玩家加入对方的队伍
 //注意①: 必须先允许组队
-diff_server_party_join: no
+diff_server_party_join: yes
 
 //是否允许来自不同服务器的玩家加入对方的公会
 //注意①: 必须先允许公会相关
-diff_server_guild_join: no
+diff_server_guild_join: yes
 
 //=====================================================
 
 //====================预定加入的功能====================
 
+//是否允许读取/存储源服的背包/手推车/仓库
+//load_source_server_inventory: yes
+//load_source_server_cart: yes
+//load_source_server_storage: yes
+//注意: 此选项一经关闭后,除非必要,不得再打开,否则有可能会出现数据覆盖的情况造成严重问题
+//会发生源服角色数据覆盖中立服对应的角色数据
+
+
+//是否允许读取/存储源服的角色属性(包括职业,加点,等级,状态buff等等)
+//no的情况下,首次跨服将会以初心者出现在跨服后的地方
+//load_source_server_chara_status: yes
+//注意: 此选项一经关闭后,除非必要,不得再打开,否则有可能会出现数据覆盖的情况造成严重问题
+//会发生源服角色数据覆盖中立服对应的角色数据
