--- a/conf/cross_server/server-2.conf
+++ b/conf/cross_server/server-2.conf
@@ -1,14 +1,19 @@
 //连入此中立服务器的服务id,此id必须与 "该服务器上inter_athena.conf中的cross_server_id的值一致,同时必须 > 0且唯一
 //请务必再三确认
 server_id: 2
+//最大6个字符长度,作为跨服时名字的前缀,中文算2个字符长度
 server_name: [B服]
 
-// cross_server_id == server_id 的角色服务器的ip,端口
+//输入被连接的服务器针对跨服的userid,passwd
+userid: 123456
+passwd: 654321
+
+//对应的角色服务器的ip,端口
+// 注意: ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
 char_server_ip: 127.0.0.1
 char_server_port: 6122
 
-// cross_server_id == server_id 的地图服务器的ip,端口
-// 注意: map_server_ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
+// 注意: ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
 // 地图服务器的 MySQL 连接配置信息
 map_server_database_ip: 127.0.0.1
 map_server_database_port: 3306
@@ -18,7 +23,7 @@ map_server_database_db: ragnarok_test_1_main
 
 
 // 日志数据库的 MySQL 连接配置信息
-// 注意: log_db_ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
+// 注意: ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
 log_db_database_ip: 127.0.0.1
 log_db_database_port: 3306
 log_db_database_id: root
