--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -6,9 +6,11 @@
 // 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
 //--------------------------------------------------------------
 
-// 启用跨服服务
-// 本服将被指定为中立服务器
+// 本服是中立服务器,是发起连接的一方
 cross_server: on
+// 本服不是中立服务器,但会被中立服务器连接时,需要设置以下独立的账号密码
+cs_userid: 123456
+cs_passwd: 654321
 
 // 是否不主动返回服务器的 IP 地址给到客户端?
 // 若您希望使用负载均衡或者反向代理等方式来提供服务,
