- update 移除无用的配置

--- a/conf/cross_server/server-1.conf
+++ b/conf/cross_server/server-1.conf
@@ -1,10 +1,11 @@
 //连入此中立服务器的服务id,此id必须互斥
 //请务必再三确认
 server_id: 1
+
 //最大6个字符长度,作为跨服时名字的前缀,中文算2个字符长度
 server_name: [A服]
 
-//输入被连接的服务器针对跨服的userid,passwd
+//输入被连接的服务器的cs_userid,cs_passwd
 userid: 123456
 passwd: 654321
 
@@ -12,21 +13,3 @@ passwd: 654321
 // 注意: ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
 char_server_ip: 127.0.0.1
 char_server_port: 6121
-
-// 注意: ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
-// 地图服务器的 MySQL 连接配置信息
-map_server_database_ip: 127.0.0.1
-map_server_database_port: 3306
-map_server_database_id: root
-map_server_database_pw: root
-map_server_database_db: ragnarok_test_1_main
-
-
-// 日志数据库的 MySQL 连接配置信息
-// 注意: ip 如果是域名, 那么禁止超过63个字符(包括标点符号)
-log_db_database_ip: 127.0.0.1
-log_db_database_port: 3306
-log_db_database_id: root
-log_db_database_pw: root
-log_db_database_db: ragnarok_test_1_log
-log_codepage: auto
