- update 大幅改写中立Map->源服Char的连接方式,目前以新增单个线程管理

--- a/conf/battle/crossserver.conf
+++ b/conf/battle/crossserver.conf
@@ -1,5 +1,14 @@
 //所有以//注释的功能均未实现
 
+//====================以下为中立Map与各Char之间的同步关系====================
+//是否以同步阻塞的方式检查所有char的存活(RA架构原生方式)
+//①:yes的情况下,任意char掉线时,中立Map都会忙于检查重连char而使得中立map大部分时间停顿
+//②:no的情况下,则会保留该char掉线玩家的数据,并且中立map不会停顿,直到该char重连时,关于该char的玩家数据才得以正常保存
+//  在这期间下线的玩家数据,有可能会回档
+//  no为了使得任意GM的服得以正常维护且不影响中立服的运行
+//如果不熟悉,请保持默认的yes
+//sync_every_char: yes
+
 //====================以下为影响不同服之间的物品流通的选项====================
 //如不想有任何互通,请在原来其他的conf中设置
 //禁止交易、交易邮件、禁止舍弃物品等设定
