--- a/conf/battle/crossserver.conf
+++ b/conf/battle/crossserver.conf
@@ -1,13 +1,13 @@
 //所有以//注释的功能均未实现
 
 //====================以下为中立Map与各Char之间的同步关系====================
-//是否以同步阻塞的方式检查所有char的存活(RA架构原生方式)
-//①:yes的情况下,任意char掉线时,中立Map都会忙于检查重连char而使得中立map大部分时间停顿
+//是否以同步阻塞的方式检查所有char的存活
+//①:yes的情况下,任意char掉线时,中立Map都会忙于检查重连char而使得中立map大部分时间停顿(RA架构原生方式)
 //②:no的情况下,则会保留该char掉线玩家的数据,并且中立map不会停顿,直到该char重连时,关于该char的玩家数据才得以正常保存
 //  在这期间下线的玩家数据,有可能会回档
-//  no为了使得任意GM的服得以正常维护且不影响中立服的运行
+//  no为了使得任意GM的服得以正常维护且不影响中立服的运行,这个时候必须源服的map-serv正常退出
 //如果不熟悉,请保持默认的yes
-//sync_every_char: yes
+sync_every_char: no
 
 //====================以下为影响不同服之间的物品流通的选项====================
 //如不想有任何互通,请在原来其他的conf中设置
@@ -44,12 +44,12 @@ diff_server_guild_join: yes
 //load_source_server_inventory: yes
 //load_source_server_cart: yes
 //load_source_server_storage: yes
-//注意: 此选项一经关闭后,除非必要,不得再打开,否则有可能会出现数据覆盖的情况造成严重问题
-//会发生源服角色数据覆盖中立服对应的角色数据
+//注意: 此选项一经关闭后,除非必要,不得再打开
+//否则有可能会出现会发生 [源服角色数据覆盖中立服对应的角色数据]
 
 
 //是否允许读取/存储源服的角色属性(包括职业,加点,等级,状态buff等等)
 //no的情况下,首次跨服将会以初心者出现在跨服后的地方
 //load_source_server_chara_status: yes
-//注意: 此选项一经关闭后,除非必要,不得再打开,否则有可能会出现数据覆盖的情况造成严重问题
-//会发生源服角色数据覆盖中立服对应的角色数据
+//注意: 此选项一经关闭后,除非必要,尽可能不得再打开
+//否则有可能会出现会发生 [源服角色数据覆盖中立服对应的角色数据]
