- update 跨服独立背包/手推车/仓库开关

--- a/conf/battle/crossserver.conf
+++ b/conf/battle/crossserver.conf
@@ -40,24 +40,20 @@ diff_server_guild_join: yes
 
 //====================预定加入的功能====================
 
-
-
 //是否允许继承并在这基础上更新源服的背包/手推车/仓库
-//inherit_source_server_inventory: yes
-//inherit_source_server_cart: yes
-//inherit_source_server_storage: yes
-//注意: 此选项一经关闭后,除非必要,不得再打开
-//否则有可能会出现会发生 [源服角色数据覆盖中立服对应的角色数据]
+//注意: yes/no之间的切换不会使得数据被覆盖
+inherit_source_server_all_storage: yes
 
 //以下功能相当于在中立服以被动的形式创建一个全新角色,需要改动并验证多个地方
 //缓慢进行中
-
+//[ ----- 未实现开关之前,默认是继承的  ----- ]
 //是否允许继承并在这基础上更新源服的角色属性(包括职业,加点,等级,状态buff等等)
 //no的情况下,首次跨服将会以初心者出现在跨服后的地方
+//注意: yes/no之间的切换不会使得数据被覆盖
 //inherit_source_server_chara_status: yes
 
+//[ ----- 未实现开关之前,默认是继承的  ----- ]
 //是否允许继承并在这基础上更新源服的gropup id
 //no的情况下,在中立服的时的默认group为0
+//注意: yes/no之间的切换不会使得数据被覆盖
 //inherit_source_server_chara_group: yes
-//注意: 此选项一经关闭后,除非必要,尽可能不得再打开
-//否则有可能会出现会发生 [源服角色数据覆盖中立服对应的角色数据]
