调整 getstoragelist 的参数列表, 补充报错信息

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -2740,7 +2740,7 @@ Body:
   Translation: ""
 - Original: "buildin_%s: Invalid scope. %s is not an instance variable.\n"
   Translation: ""
-- Original: "buildin_%s: Invalid storage_id '%d'!\n"
+- Original: "buildin_%s: Invalid storage id '%d'!\n"
   Translation: ""
 - Original: "buildin_%s: Player doesn't have cart (CID:%d).\n"
   Translation: ""
@@ -2768,6 +2768,8 @@ Body:
   Translation: ""
 - Original: "buildin_%s: Unknown map '%s'.\n"
   Translation: ""
+- Original: "buildin_%s: cannot read inventory or storage data.\n"
+  Translation: ""
 - Original: "buildin_%s: failed to delete %d items (AID=%d item_id=%u).\n"
   Translation: ""
 - Original: "buildin_%s: illegal type, need integer!\n"
@@ -2785,6 +2787,10 @@ Body:
 - Original: "buildin_%s: not a variable\n"
   Translation: ""
 - Original: "buildin_%s: npc not attached.\n"
+  Translation: ""
+- Original: "buildin_%s: player doesn't have a guild (CID=%d).\n"
+  Translation: ""
+- Original: "buildin_%s: player doesn't have cart (CID=%d).\n"
   Translation: ""
 - Original: "buildin_%s: the No.%d parameter '%s' (%s) must be integer array type.\n"
   Translation: "buildin_%s: 第 %d 個引數 '%s' (%s) 必須是一個數值型陣列.\n"
@@ -5413,10 +5419,6 @@ Body:
 - Original: "script:getelementofarray: index out of range (%[{PRId64}])\n"
   Translation: ""
 - Original: "script:getelementofarray: not a variable\n"
-  Translation: ""
-- Original: "script:getinventorylist: cannot read storage for %s\n"
-  Translation: ""
-- Original: "script:getinventorylist: unknown command '%s'\n"
   Translation: ""
 - Original: "script:implode: array length = 0\n"
   Translation: ""
