--- a/conf/battle/crossserver.conf
+++ b/conf/battle/crossserver.conf
@@ -1,11 +1,12 @@
 //所有以//注释的功能均未实现
 
-//====================以下为中立Map与各Char之间的同步关系====================
+//====================中立Map与各Char之间相关====================
 //是否以同步阻塞的方式检查所有char的存活
 //①:yes的情况下,任意char掉线时,中立Map都会忙于检查重连char而使得中立map大部分时间停顿(RA架构原生方式)
 //②:no的情况下,则会保留该char掉线玩家的数据,并且中立map不会停顿,直到该char重连时,关于该char的玩家数据才得以正常保存
 //  在这期间下线的玩家数据,有可能会回档
-//  no为了使得任意GM的服得以正常维护且不影响中立服的运行,这个时候必须源服的map-serv正常退出
+//  no为了使得任意GM的服得以正常维护且不影响中立服的运行
+//  这个时候必须源服的map-serv正常退出(ctrl+c或@mapexit)
 //如果不熟悉,请保持默认的yes
 sync_every_char: no
 
@@ -36,24 +37,12 @@ diff_server_party_join: yes
 //注意①: 必须先允许公会相关
 diff_server_guild_join: yes
 
-//=====================================================
+//====================继承源数据相关====================
 
-//====================预定加入的功能====================
-
-//是否允许继承并在这基础上更新源服的背包/手推车/仓库
+//是否允许继承并在这基础上更新源服的背包/手推车/仓库/身上装备
 //注意: yes/no之间的切换不会使得数据被覆盖
 inherit_source_server_all_storage: yes
 
-//以下功能相当于在中立服以被动的形式创建一个全新角色,需要改动并验证多个地方
-//缓慢进行中
-//[ ----- 未实现开关之前,默认是继承的  ----- ]
-//是否允许继承并在这基础上更新源服的角色属性(包括职业,加点,等级,状态buff等等)
-//no的情况下,首次跨服将会以初心者出现在跨服后的地方
-//注意: yes/no之间的切换不会使得数据被覆盖
-//inherit_source_server_chara_status: yes
+//====================预定加入的功能====================
 
-//[ ----- 未实现开关之前,默认是继承的  ----- ]
-//是否允许继承并在这基础上更新源服的gropup id
-//no的情况下,在中立服的时的默认group为0
-//注意: yes/no之间的切换不会使得数据被覆盖
-//inherit_source_server_chara_group: yes
+
