--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -6,11 +6,27 @@
 // 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
 //--------------------------------------------------------------
 
+//==============跨服设定==============
 // 本服是中立服务器,是发起连接的一方
 cross_server: on
 // 本服不是中立服务器,但会被中立服务器连接时,需要设置以下独立的账号密码
 cs_userid: 123456
 cs_passwd: 654321
+
+//是否允许继承并在这基础上更新源服的角色属性(包括职业,加点,等级,宠物,召唤物,佣兵,状态buff,Zeny等等)
+//特地的,关于 任务/成就/个人变量/账号变量 的继承不在这里控制(如没有开关,则默认继承)
+//no的情况下,首次跨服将会以初心者姿态出现在跨服后的地点
+//注意: yes/no之间的切换使得[中立服的数据]被覆盖
+inherit_source_server_chara_status: yes
+
+//是否允许继承源服的group_id
+//no的情况下,在中立服的时的默认group_id为0,中立服不保存group_id
+inherit_source_server_chara_group: yes
+//no的情况下,下述多个group_id为例外,最多5行
+inherit_source_server_chara_group_except: 5
+inherit_source_server_chara_group_except: 99
+//==============跨服设定==============
+
 
 // 是否不主动返回服务器的 IP 地址给到客户端?
 // 若您希望使用负载均衡或者反向代理等方式来提供服务,
