- update 正确继承和更新个人变量/账号变量

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -13,11 +13,21 @@ cross_server: on
 cs_userid: 123456
 cs_passwd: 654321
 
-//是否允许继承并在这基础上更新源服的角色属性(包括职业,加点,等级,宠物,召唤物,佣兵,状态buff,Zeny等等)
-//特地的,关于 任务/成就/个人变量/账号变量 的继承不在这里控制(如没有开关,则默认继承)
+//是否允许继承并在这基础上更新源服的角色属性(包括职业,加点,等级,状态buff,Zeny等等)
 //no的情况下,首次跨服将会以初心者姿态出现在跨服后的地点
 //注意: yes/no之间的切换使得[中立服的数据]被覆盖
 inherit_source_server_chara_status: yes
+
+//个人变量/账号变量继承(尚未实现,默认继承)
+//inherit_source_server_chara_var: yes
+
+//宠物,元素,佣兵继承(尚未实现,默认继承)
+//inherit_source_server_chara_object: yes
+
+//任务/成就(尚未实现,默认继承)
+//inherit_source_server_chara_quest: yes
+//inherit_source_server_chara_achi: yes
+
 
 //是否允许继承源服的group_id
 //no的情况下,在中立服的时的默认group_id为0,中立服不保存group_id
