调整注释和报错信息 [no ci]

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -324,10 +324,6 @@ Body:
   Translation: ""
 - Original: "%s: Player with nick '%s' is not found.\n"
   Translation: ""
-- Original: "%s: Script need contiune..\n"
-  Translation: ""
-- Original: "%s: Should not open the premiumStorage\n"
-  Translation: ""
 - Original: "%s: The battle record type is not invalid.\n"
   Translation: "%s: 指定的战斗记录类型无效, 请检查.\n"
 - Original: "%s: The counter name '%s' is not exists, please initialize before using.\n"
@@ -347,8 +343,6 @@ Body:
 - Original: "%s: Unsupport encoding: e_pandas_encoding[%d], defaulting to latin1\n"
   Translation: ""
 - Original: "%s: _Buffer size is only %lu but we need %lu, Could not realloc...\n"
-  Translation: ""
-- Original: "%s: account_id = %u\n"
   Translation: ""
 - Original: "%s: fatal error ! player not attached!\n"
   Translation: ""
@@ -2788,9 +2782,11 @@ Body:
   Translation: ""
 - Original: "buildin_%s: npc not attached.\n"
   Translation: ""
-- Original: "buildin_%s: player doesn't have a guild (CID=%d).\n"
+- Original: "buildin_%s: player doesn't have cart (CID: %d).\n"
   Translation: ""
-- Original: "buildin_%s: player doesn't have cart (CID=%d).\n"
+- Original: "buildin_%s: player doesn't join the guild (CID: %d).\n"
+  Translation: ""
+- Original: "buildin_%s: player's guild does not have a guild storage (CID: %d | Guild ID: %d).\n"
   Translation: ""
 - Original: "buildin_%s: the No.%d parameter '%s' (%s) must be integer array type.\n"
   Translation: "buildin_%s: 第 %d 个参数 '%s' (%s) 必须是一个数值型数组.\n"
