实现与 getinventorylist 近似的系列指令用于获取仓库、手推车中的物品信息 (#612)
感谢 @Hong-Shin 测试、感谢 @niu0710 协助 Review

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1764,6 +1764,8 @@ Body:
   Translation: ""
 - Original: "Node \"ItemId\" is missing.\n"
   Translation: ""
+- Original: "Node \"Max\" value is exceeds MAX_STORAGE, defaulting to MAX_STORAGE(%d).\n"
+  Translation: "\"Max\" 节点的值超过了 MAX_STORAGE, 已将其重设为 MAX_STORAGE (最多保存 %d 个道具).\n"
 - Original: "Node \"Name\" is missing.\n"
   Translation: ""
 - Original: "Node \"Rewards\" is missing.\n"
@@ -2734,6 +2736,8 @@ Body:
   Translation: ""
 - Original: "buildin_%s: Invalid scope. %s is not an instance variable.\n"
   Translation: ""
+- Original: "buildin_%s: Invalid storage id '%d'!\n"
+  Translation: ""
 - Original: "buildin_%s: Player doesn't have cart (CID:%d).\n"
   Translation: ""
 - Original: "buildin_%s: The No.%d parameter is not integer type.\n"
@@ -2760,6 +2764,8 @@ Body:
   Translation: ""
 - Original: "buildin_%s: Unknown map '%s'.\n"
   Translation: ""
+- Original: "buildin_%s: cannot read inventory or storage data.\n"
+  Translation: ""
 - Original: "buildin_%s: failed to delete %d items (AID=%d item_id=%u).\n"
   Translation: ""
 - Original: "buildin_%s: illegal type, need integer!\n"
@@ -2777,6 +2783,12 @@ Body:
 - Original: "buildin_%s: not a variable\n"
   Translation: ""
 - Original: "buildin_%s: npc not attached.\n"
+  Translation: ""
+- Original: "buildin_%s: player doesn't have cart (CID: %d).\n"
+  Translation: ""
+- Original: "buildin_%s: player doesn't join the guild (CID: %d).\n"
+  Translation: ""
+- Original: "buildin_%s: player's guild does not have a guild storage (CID: %d | Guild ID: %d).\n"
   Translation: ""
 - Original: "buildin_%s: the No.%d parameter '%s' (%s) must be integer array type.\n"
   Translation: "buildin_%s: 第 %d 个参数 '%s' (%s) 必须是一个数值型数组.\n"
