优化加载与解析 YAML 文件时出现的一些报错体验

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -976,6 +976,8 @@ Body:
   Translation: ""
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
+- Original: "Error while looking for the '%s' node: %s\n"
+  Translation: "檢查 '%s' 節點是否存在時發生錯誤: %s\n"
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs, took %[{PRIu64}] ms.\n"
   Translation: "事件 '[{CL_WHITE}]%s[{CL_RESET}]' 已經在 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 上被執行 (耗時 %[{PRIu64}] 毫秒).\n"
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs.\n"
@@ -1882,6 +1884,8 @@ Body:
   Translation: ""
 - Original: "Please use ANSI character set as database encoding instead of [{CL_WHITE}]'%s'[{CL_RESET}] for [{CL_WHITE}]'%s'[{CL_RESET}] connection. The ANSI character set like: latin1, gbk, big5.\n"
   Translation: "建議使用 ANSI 編碼作為資料庫字符集, 而不是用 [{CL_WHITE}]'%s'[{CL_RESET}] 作為 [{CL_WHITE}]'%s'[{CL_RESET}] 連線所指向的資料庫的字符集 (ANSI 編碼是指: latin1, gbk, big5 等).\n"
+- Original: "Press any key to continue reading other files, but it usually means a lot of errors.\n"
+  Translation: "按任意鍵繼續載入其他檔案, 但後續可能會出現更多錯誤 (建議先修正以下錯誤).\n"
 - Original: "Prevented infinite warp loop for player (%d:%d). Please fix NPC: '%s', path: '%s'\n"
   Translation: ""
 - Original: "Previous script (lost):\n"
@@ -2200,6 +2204,8 @@ Body:
   Translation: "內部通訊賬號密碼通常設定在 map_athena.conf 和 char_athena.conf 檔案中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋它? 這是最後一次確認. (Y/N)\n"
+- Original: "The following error occurred while loading the '%s': \n"
+  Translation: "載入 YAML 檔案時發現內容存在錯誤, 請檢查: %s\n"
 - Original: "The group %s must start with 'IG_'.\n"
   Translation: ""
 - Original: "The group %s must start with 'MOBG_'.\n"
@@ -5403,13 +5409,13 @@ Body:
 - Original: "script:flagemblem: unexpected subtype %d for npc %d '%s'\n"
   Translation: ""
 - Original: "script:get_val: cannot access instance variable '%s', defaulting to \"\"\n"
-  Translation: ""
+  Translation: "script:get_val: 無法訪問副本變數 %s, 將它的值視為: \"\"\n"
 - Original: "script:get_val: cannot access instance variable '%s', defaulting to 0\n"
-  Translation: ""
+  Translation: "script:get_val: 無法訪問副本變數 %s, 將它的值視為: 0\n"
 - Original: "script:get_val: cannot access player variable '%s', defaulting to \"\"\n"
-  Translation: ""
+  Translation: "script:get_val: 無法訪問玩家變數 '%s', 將它的值視為: \"\"\n"
 - Original: "script:get_val: cannot access player variable '%s', defaulting to 0\n"
-  Translation: ""
+  Translation: "script:get_val: 無法訪問玩家變數 '%s', 將它的值視為: 0\n"
 - Original: "script:getargcount: used out of function or callsub label!\n"
   Translation: ""
 - Original: "script:getarraysize: not a variable\n"
