--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -976,6 +976,8 @@ Body:
   Translation: ""
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
+- Original: "Error while looking for the '%s' node: %s\n"
+  Translation: "检查 '%s' 节点是否存在时发生错误: %s\n"
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs, took %[{PRIu64}] ms.\n"
   Translation: "事件 '[{CL_WHITE}]%s[{CL_RESET}]' 已经在 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 上被执行 (耗时 %[{PRIu64}] 毫秒).\n"
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs.\n"
@@ -1882,6 +1884,8 @@ Body:
   Translation: ""
 - Original: "Please use ANSI character set as database encoding instead of [{CL_WHITE}]'%s'[{CL_RESET}] for [{CL_WHITE}]'%s'[{CL_RESET}] connection. The ANSI character set like: latin1, gbk, big5.\n"
   Translation: "建议使用 ANSI 编码作为数据库字符集, 而不是用 [{CL_WHITE}]'%s'[{CL_RESET}] 作为 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的数据库的字符集 (ANSI 编码是指: latin1, gbk, big5 等).\n"
+- Original: "Press any key to continue reading other files, but it usually means a lot of errors.\n"
+  Translation: "按任意键继续加载其他文件, 但后续可能会出现更多错误 (建议先修正以下错误).\n"
 - Original: "Prevented infinite warp loop for player (%d:%d). Please fix NPC: '%s', path: '%s'\n"
   Translation: ""
 - Original: "Previous script (lost):\n"
@@ -2200,6 +2204,8 @@ Body:
   Translation: "内部通讯账号密码通常设置在 map_athena.conf 和 char_athena.conf 文件中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 转换后即将输出的 \"%s\" 已经有文件存在.\n[{CL_CYAN}][选择][{CL_RESET}]: 你是否需要覆盖它? 这是最后一次确认. (Y/N)\n"
+- Original: "The following error occurred while loading the '%s': \n"
+  Translation: "加载 YAML 文件时发现内容存在错误, 请检查: %s\n"
 - Original: "The group %s must start with 'IG_'.\n"
   Translation: ""
 - Original: "The group %s must start with 'MOBG_'.\n"
@@ -5403,13 +5409,13 @@ Body:
 - Original: "script:flagemblem: unexpected subtype %d for npc %d '%s'\n"
   Translation: ""
 - Original: "script:get_val: cannot access instance variable '%s', defaulting to \"\"\n"
-  Translation: ""
+  Translation: "script:get_val: 无法访问副本变量 %s, 将它的值视为: \"\"\n"
 - Original: "script:get_val: cannot access instance variable '%s', defaulting to 0\n"
-  Translation: ""
+  Translation: "script:get_val: 无法访问副本变量 %s, 将它的值视为: 0\n"
 - Original: "script:get_val: cannot access player variable '%s', defaulting to \"\"\n"
-  Translation: ""
+  Translation: "script:get_val: 无法访问玩家变量 '%s', 将它的值视为: \"\"\n"
 - Original: "script:get_val: cannot access player variable '%s', defaulting to 0\n"
-  Translation: ""
+  Translation: "script:get_val: 无法访问玩家变量 '%s', 将它的值视为: 0\n"
 - Original: "script:getargcount: used out of function or callsub label!\n"
   Translation: ""
 - Original: "script:getarraysize: not a variable\n"
