- update 更新佣兵/元素精灵/生命体/宠物的继承设定 - update 优化逻辑

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -14,15 +14,14 @@ cs_userid: 123456
 cs_passwd: 654321
 
 //是否允许继承并在这基础上更新源服的角色属性(包括职业,加点,等级,状态buff,Zeny等等)
+//额外地,包括宠物,元素精灵,生命体,佣兵也随着这个选项决定生效
 //no的情况下,首次跨服将会以初心者姿态出现在跨服后的地点
 //注意: yes/no之间的切换使得[中立服的数据]被覆盖
-inherit_source_server_chara_status: yes
+//注意: no的情况下,于源服捕获的宠物蛋,无法在中立服孵化但会出现在列表上.
+inherit_source_server_chara_status: no
 
 //个人变量/账号变量继承(尚未实现,默认继承)
 //inherit_source_server_chara_var: yes
-
-//宠物,元素,佣兵继承(尚未实现,默认继承)
-//inherit_source_server_chara_object: yes
 
 //任务/成就(尚未实现,默认继承)
 //inherit_source_server_chara_quest: yes
