- fix bonus_script独立 - fix skillcooldown独立 - fix refresh mailbox

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -18,6 +18,7 @@ cs_passwd: 654321
 //no的情况下,首次跨服将会以初心者姿态出现在跨服后的地点
 //注意: yes/no之间的切换使得[中立服的数据]被覆盖
 //注意: no的情况下,于源服捕获的宠物蛋,无法在中立服孵化但会出现在列表上.
+//      要解决此问题,建议在crossserver.conf中inherit_source_server_all_storage设置为no.
 inherit_source_server_chara_status: no
 
 //个人变量/账号变量继承(尚未实现,默认继承)
